[package]
name = "slot_machine_hiyo"
version = "0.1.0"
authors = ["kareinonitsuke"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand="0.6.5"
